--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
           <div class="col-1-of-4">col 2 of 4</div>
         </div>
       </section>
+
+      <div class="box"></div>
     </header>
     <script src="Chalennges.js"></script>
   </body>
